# penumbra

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: documentation.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/connection/: command.rs  mod.rs  port.rs
core/src/connection/backend/: libusb_backend.rs  mod.rs  serial_backend.rs
core/src/core/: device.rs  storage.rs  utilities.rs
core/src/core/crypto/: config.rs  mod.rs
core/src/da/: mod.rs  protocol.rs
core/src/da/xflash/: exts.rs  flash.rs  mod.rs
core/src/exploit/: carbonara.rs  mod.rs
docs/: flake.nix  pnpm-lock.yaml  quartz.config.ts  quartz.layout.ts
docs/content/: index.md
docs/content/Mediatek/Common/: Seccfg.md
docs/content/Mediatek/Common/DA/: DA Extensions.md  Download Agent.md
docs/content/Mediatek/Exploits/: Carbonara.md
docs/quartz/components/: Footer.tsx
docs/quartz/styles/: custom.scss
docs/quartz/util/: theme.ts
scripts/: extract_da.py  find_crypto_offsets.py  merge_da.py  parse_da.py
src/: lib.rs  main.rs
src/connection/: command.rs  mod.rs
src/core/: device.rs  mod.rs  seccfg.rs  storage.rs
src/core/crypto/: config.rs  mod.rs  sej.rs
src/da/: da.rs  mod.rs  protocol.rs
src/da/xflash/: cmds.rs  exts.rs  flash.rs  mod.rs
src/exploit/: carbonara.rs  exploit.rs  mod.rs
tui/: Cargo.toml
tui/src/: app.rs  logo.txt  main.rs
tui/src/pages/: device.rs  mod.rs  welcome.rs
