[package]
name = "penumbra-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
penumbra = {path = ".." }
env_logger = "0.11.8"
crossterm = "0.29.0"
ratatui-explorer = "0.2.1"
async-trait = "0.1.89"
tokio = {version="1.47.1", features = ["full"]}
tokio-serial = "5.4.5"
futures = "0.3.31"
log = "0.4.28"
hex = "0.4.3"

[[bin]]
name = "penumbra-tui"
path = "src/main.rs"